Add _term_clause
