# docs/swagger.json
@@ -168,6 +168,15 @@
         "repository.Search": {
             "type": "object",
             "properties": {
+                "ids_filter": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    },
+                    "example": [
+                        "performance"
+                    ]
+                },
                 "include_basic_aggs": {
                     "type": "boolean",
                     "example": true
